--- a/WebContent/coupon.html
+++ b/WebContent/coupon.html
@@ -4,11 +4,23 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 <link rel="stylesheet" href="css/main.css"></link>
+<style>
+    body{
+        background-color:#f5f5f5;
+    }
+    header{
+        padding:40px 0 20px 10px;
+        color:#666;
+    }
+</style>
 </head>
-<body style="margin-top:200px;">
+<body style="margin-top:50px;">
     <div class="coupon-wrapper">
         <div class="coupon-points">
-		    <div class="coupon-item">
+	        <header>
+	            <h1>积分券</h1>
+	        </header>
+		    <a class="coupon-item" href="coupon_details.html" >
 		        <div class="coupon-item-left">
 		            <div class="coupon-icon">
 		                <span>积</span>
@@ -17,6 +29,19 @@
 		               <div>积分券</div>
 		               <div>点击用积分换取积分券</div>
 		               <div>50分</div>
+		            </div>
+		        </div>
+		        <img class="smallcoupon" src="img/smallcoupon.png" />
+		    </a>
+		    <div class="coupon-item">
+		        <div class="coupon-item-left">
+		            <div class="coupon-icon">
+		                <span>积</span>
+		            </div>
+		            <div class="coupon-name">
+		               <div>积分券</div>
+		               <div>点击用积分换取积分券</div>
+		               <div>100分</div>
 		            </div>
 		        </div>
 		        <img class="smallcoupon" src="img/smallcoupon.png" />
@@ -29,13 +54,16 @@
 		            <div class="coupon-name">
 		               <div>积分券</div>
 		               <div>点击用积分换取积分券</div>
-		               <div>50分</div>
+		               <div>300分</div>
 		            </div>
 		        </div>
 		        <img class="smallcoupon" src="img/smallcoupon.png" />
 		    </div>
 		</div>
         <div class="coupon-money">
+            <header>
+	            <h1>现金券</h1>
+	        </header>
 		    <div class="coupon-item">
 		        <div class="coupon-item-left">
 		            <div class="coupon-icon">
@@ -53,6 +81,37 @@
 		        <div class="coupon-item-left">
 		            <div class="coupon-icon">
 		                <span>钱</span>
+		            </div>
+		            <div class="coupon-name">
+		               <div>10元</div>
+		               <div>点击用积分换取现金券</div>
+		               <div>1000分</div>
+		            </div>
+		        </div>
+		        <img class="smallcoupon" src="img/smallcoupon.png" />
+		    </div>
+		</div>
+        <div class="coupon-goods">
+            <header>
+	            <h1>实物券</h1>
+	        </header>
+		    <div class="coupon-item">
+		        <div class="coupon-item-left">
+		            <div class="coupon-icon">
+		                <span>物</span>
+		            </div>
+		            <div class="coupon-name">
+		               <div>1元</div>
+		               <div>点击用积分换取现金券</div>
+		               <div>100分</div>
+		            </div>
+		        </div>
+		        <img class="smallcoupon" src="img/smallcoupon.png" />
+		    </div>
+		    <div class="coupon-item">
+		        <div class="coupon-item-left">
+		            <div class="coupon-icon">
+		                <span>物</span>
 		            </div>
 		            <div class="coupon-name">
 		               <div>10元</div>
