--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -15,23 +15,23 @@
 	                    <div class="card-title"></div>
 	                </div>
 	                <div class="card-bottom">
-	                    <div class="VIP-ID">0000 49 31</div>
+	                    <div class="VIP-ID">0000 9988 6666</div>
 	                </div>
 	            </div>    
             </div>
             <div class="block-wrapper">
-                <div class="my-points">
-                    <div>积分</div>
-                    <div id="my-points">100</div>
-                </div>
+                <a class="my-points" href="vip_history.html">
+                    <div class="title">积分</div>
+                    <div class="content" id="my-points">100</div>
+                </a>
                 <div class="my-coupon">
-                    <div>我的券</div>
-                    <div id="my-coupon">1张</div>
+                    <div class="title">我的券</div>
+                    <div class="content" id="my-coupon">9张</div>
                 </div>
-                <div class="my-discount">
-                    <div>折扣</div>
-                    <div id="my-discount">无折扣</div>
-                </div>
+                <a class="my-discount" href="vip_level.html">
+                    <div class="title">会员等级</div>
+                    <div class="content" id="my-discount">普通会员</div>
+                </a>
             </div>
            <div class="line"></div>
            <div class="item-wrapper">
@@ -42,7 +42,7 @@
                    </div>
                    <img class="arrow" src="img/arrow.png" />
                </a>
-               <a class="item">
+               <a class="item" href="coupon.html">
                    <div class="item-left">
                        <img class="" src="img/coupon.png"/>
                        <span class="">可用券</span>
