--- a/WebContent/coupon_details.html
+++ b/WebContent/coupon_details.html
@@ -24,11 +24,15 @@
              <button class="btn">立即兑券</button>
              </div>
              <div class="coupon-deatils-content">
-                 <div class="description">
+                 <div class="description cell">
+                     <div>兑换条件：</div>
+                     <div>消耗1000积分获得此券</div>
+                 </div>
+                 <div class="description cell">
                      <div>使用条件：</div>
                      <div>此券可在购买商品时抵付款，适用于购买星饰居旗下所有商品</div>
                  </div>
-                 <div class="deadline">
+                 <div class="deadline cell">
                      <div>使用时间：</div>
                      <div>永久有效</div>
                  </div>
