--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -24,10 +24,10 @@
                     <div class="title">积分</div>
                     <div class="content" id="my-points">100</div>
                 </a>
-                <div class="my-coupon">
+                <a class="my-coupon" href="counpon_my.html">
                     <div class="title">我的券</div>
                     <div class="content" id="my-coupon">9张</div>
-                </div>
+                </a>
                 <a class="my-discount" href="vip_level.html">
                     <div class="title">会员等级</div>
                     <div class="content" id="my-discount">普通会员</div>
@@ -38,7 +38,7 @@
                <a class="item" href="coupon.html">
                    <div class="item-left">
                        <img src="img/points.png"/>
-                       <span>积分兑换</span>
+                       <span>兑换券</span>
                    </div>
                    <img class="arrow" src="img/arrow.png" />
                </a>
