--- a/WebContent/vip_history.html
+++ b/WebContent/vip_history.html
@@ -10,7 +10,7 @@
         <div class="points-wrapper">
             <div class="points-title">我的可用积分:</div>
             <div class="points-now">
-                180
+                <span id="points-now">180</span><span>积分</span>
             </div>
         </div>
         <div class="points-history">
