--- a/WebContent/vip_level.html
+++ b/WebContent/vip_level.html
@@ -14,12 +14,29 @@
             <div class="totalpoints-wrapper">
 	            <div class="totalpoints">
 	                 <span class="title">以累计积累</span>
-	                 <span id="totalpoints">989</span><span>积分</span>
+	                 <span id="totalpoints">989</span><span>里程</span>
 	            </div>
 	            <div class="level">
 	                                                  普通级
 	            </div>
             </div>
+        </div>
+        <div class="leveldetails-wrapper">
+        <header>
+            <h1>级别可享</h1>
+        </header>
+        <div class="vip-deatils-wrapper">
+             <div class="vip-deatils-content">
+                 <div class="cell">
+                     <div>折扣优惠：</div>
+                     <div>享星饰居旗下所有商品9.8折优惠！</div>
+                 </div>
+                 <div class="cell">
+                     <div>特价优惠：</div>
+                     <div>独享星饰居鹅绒被999元特价！</div>
+                 </div>
+             </div>
+        </div>
         </div>
     </div>
 </body>
